修改启动脚本